--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "selfbot-backup",
-  "version": "3.3.2",
+  "version": "3.3.12",
   "description": "A complete framework to facilitate server backup using discord.js v12",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "files": [
-    "lib/**/*"
+    "src/**/*"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
